--- a/certified_apps.json
+++ b/certified_apps.json
@@ -9,6 +9,15 @@
 		"project_id": "gitweb"
 	},
 	{
+		"id": "kernel:kernel",
+		"name": "GitWeb",
+		"author": "MrCrayfish, MinecraftDoodler",
+		"authors": ["MrCrayfish", "MinecraftDoodler"],
+		"description": "GitWeb is a web browser powered by GitHub. It is community driven, which means websites you browse are created by other players.",
+		"screenshots": 0,
+		"project_id": "gitweb"
+	},
+	{
 		"id": "bubble_burst:bubble_game",
 		"name": "Bubble Burst",
 		"author": "CoffeeCatRailway",
